Begin Button Inserted

--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&display=swap');
-
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family:'IBM+Plex+Mono';
-    color: black;
-}
+   
 body{
     margin: 2rem;
     background-color: yellowgreen;
@@ -15,8 +8,10 @@ body{
     margin-bottom: 5%;
     margin-right: 35%;
     margin-left: 35%;
-
-    
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: 'IBM plex Mono', monospace;
+    color: black;  
 }
 /*Background image*/
 #brainy{
