--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -23,3 +23,12 @@ body{
     margin-right: 50%;
     margin-left: 5%;
 }
+buttons {
+    border: 4px solid white;
+    background-color: whitesmoke;
+    padding: 10px;
+    margin-right: 15%;
+    margin-left: auto;
+    font-family: 'IBM plex Mono, monospace';
+    color: white
+}
