--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -17,18 +17,29 @@ body{
 #brainy{
     padding: 5px;
     border: 4px dashed white;
-    background-position: center;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-right: 50%;
     margin-left: 5%;
 }
-buttons {
+h1{
+    font-style: oblique;
+    color: white;
+    margin-top: 100px;
+    text-align: center;
+    
+    
+}
+button {
     border: 4px solid white;
-    background-color: whitesmoke;
+    background-color: grey;
     padding: 10px;
     margin-right: 15%;
     margin-left: auto;
     font-family: 'IBM plex Mono, monospace';
     color: white
+}
+button:hover{
+    background: hotpink;
+
 }
