--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -1,36 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&display=swap');
-   
+ 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'IBM plex Mono', monospace;;
+}
+
+/*Background image*/
+#brainy{
+    padding: 5px;
+    border: 4px dashed white;
+    margin-bottom: 5%;
+    margin-right: 50%;
+    margin-left: 5%;
+}
+
 body{
     margin: 2rem;
     background-color: yellowgreen;
     text-align: center;
-    margin-top: 5%;
     margin-bottom: 5%;
     margin-right: 35%;
     margin-left: 35%;
     padding: 0%;
     box-sizing: border-box;
-    font-family: 'IBM plex Mono', monospace;
     color: black;  
 }
-/*Background image*/
-#brainy{
-    padding: 5px;
-    border: 4px dashed white;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-right: 50%;
-    margin-left: 5%;
-}
-h1{
-    font-style: oblique;
-    color: white;
-    margin-top: 100px;
+
+container{
+    display: flex;
+    background-color: green;
+    height: 80%;
+    width: 80%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    
-    
+    box-shadow: 0 0 5px 4px;
+    border-radius: 8px;
+
 }
-button {
+.score{
+    font-size: large;
+    font-weight: bold;
+}
+#player-score{
+    color: hotpink;
+}
+#total-score{
+    color: hotpink;
+}
+
+btn {
     border: 4px solid white;
     background-color: grey;
     padding: 10px;
